# libiconv

./: .gitignore  CMakeLists.txt  README.md  libiconv.sln
include/: config.h  iconv.h  utf7.h  utf8.h
libiconv/: libiconv.aps  libiconv.cpp  libiconv.rc  libiconv.vcxproj  libiconv.vcxproj.filters  localcharset.c  localcharset.h
